--- a/src/styles.css
+++ b/src/styles.css
@@ -139,3 +139,8 @@ h2 {
 
 #container > div {
 }
+
+.remove-img {
+  background-image: url("/assets/img/icons/remove.png");
+  background-size: cover;
+}
