--- a/src/app/content/projects/projects.component.html
+++ b/src/app/content/projects/projects.component.html
@@ -11,7 +11,7 @@
     </button>
     <div class="collapse" id="collapse{{project.id}}">
       <div class="card card-body">
-        {{project.title}}
+        <div class="project-address">{{ project.address }}</div>
       </div>
     </div>
   </li>
