--- a/src/app/managing/works/works.component.html
+++ b/src/app/managing/works/works.component.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 </div>
-
+<div [(ngModel)]="test.message"></div>
 <app-create-category
   *ngIf="categoryCreation"
   (close)="categoryCreation = false"
