--- a/src/app/content/projects/projects.component.css
+++ b/src/app/content/projects/projects.component.css
@@ -1,8 +1,10 @@
 #projects-list {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+  width: 90vw;
+  margin: auto;
+  max-width: 650px;
+  border: 1px solid #CED6E5;
+  border-radius: 5px;
 }
 
 .project {
@@ -13,6 +15,8 @@
   background-color: #CED6E5;
   box-shadow: none;
   border: none;
-  border-bottom: 1px solid #666e7f;
+  border-bottom: 1px solid rgb(240, 246, 255);
   height: 4rem;
+  color: #333;
+  font-weight: 600;
 }
