--- a/src/app/managing/nav-bar/nav-bar.component.html
+++ b/src/app/managing/nav-bar/nav-bar.component.html
@@ -1,7 +1,10 @@
 <div id="placeholder"></div>
 <div id="navigation">
   <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <button class="btn btn-secondary dropdown-toggle"
+            type="button" id="dropdownMenuButton"
+            data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
     </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
       <a class="dropdown-item" routerLink="projects">Projects</a>
