--- a/src/app/content/projects/projects.component.html
+++ b/src/app/content/projects/projects.component.html
@@ -33,7 +33,7 @@
       {{project.title}}
     </button>
     <div class="collapse" id="collapse{{project.id}}">
-      <div class="card card-body">
+      <div class="card card-body" (click)="selectProject(project)">
         <div class="project-address">{{ project.address }}</div>
       </div>
     </div>
