--- a/src/app/content/projects/project_works/create-work/create-work.component.html
+++ b/src/app/content/projects/project_works/create-work/create-work.component.html
@@ -34,6 +34,13 @@
       </div>
     </div>
 
+    <div id="work-attributes" *ngIf="selectedWork">
+      <input type="number" class="form-input-light" placeholder="Площадь"
+             id="square"
+             name="square"
+             [(ngModel)]="selectedWork.square">
+    </div>
+
     <!--<div class="form-input-light">-->
       <!--<label for="work-price">цена <span>{{viewProjectWork.price}}</span></label>-->
       <!--<input type="text"-->
