--- a/src/app/content/projects/create-project/create-project.component.html
+++ b/src/app/content/projects/create-project/create-project.component.html
@@ -1,4 +1,11 @@
 <form action="" (ngSubmit)="createProject($event)">
   <input type="text" name="project-title" [(ngModel)]="project.title">
+
+  <div class="input-group input-daterange">
+    <input type="text" class="form-control" value="2012-04-05">
+    <div class="input-group-addon">to</div>
+    <input type="text" class="form-control" value="2012-04-19">
+  </div>
+
   <button type="submit">Добавить</button>
 </form>
