--- a/src/app/content/projects/project_works/create-work/create-work.component.html
+++ b/src/app/content/projects/project_works/create-work/create-work.component.html
@@ -35,7 +35,7 @@
     </div>
 
     <div id="work-attributes" *ngIf="selectedWork">
-      <input type="number" class="form-input-light" placeholder="Площадь"
+      <input type="text" class="form-input-light" placeholder="Площадь"
              id="square"
              name="square"
              [(ngModel)]="selectedWork.square">
