--- a/src/app/content/projects/projects.component.css
+++ b/src/app/content/projects/projects.component.css
@@ -1,11 +1,14 @@
 #projects-list {
   list-style-type: none;
-  width: 90vw;
+  width: 100vw;
   margin: auto;
   max-width: 650px;
   border: 1px solid #CED6E5;
   border-radius: 5px;
   padding: 0;
+}
+#projects-list .card-body:hover {
+  cursor: pointer;
 }
 
 .project {
@@ -20,4 +23,16 @@
   height: 4rem;
   color: #333;
   font-weight: 600;
+}
+#headers {
+  display: flex;
+  justify-content: space-around;
+  padding: 0 12px;
+  font-weight: bold;
+  font-size: 2rem;
+  background-color: #2F333F;
+  color: #CED6E5;
+  height: 4.5rem;
+  line-height: 4rem;
+  position: relative;
 }
